exports[`components/Image passes other props through to underlying View 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  onResponderGrant={[Function]}
  style={Object {}} />
`;

exports[`components/Image prop "accessibilityLabel" 1`] = `
<div
  aria-label="accessibilityLabel"
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}} />
`;

exports[`components/Image prop "accessible" 1`] = `
<div
  aria-hidden={true}
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}} />
`;

exports[`components/Image prop "children" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}}>
  <div
    className="unique" />
</div>
`;

exports[`components/Image prop "defaultSource" does not override "height" and "width" styles 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={
    Object {
      "backgroundImage": "url(\"https://google.com/favicon.ico\")",
      "height": "20px",
      "width": "40px",
    }
  }>
  <img
    className="
  rn-bottom:0px
  rn-height:100%
  rn-left:0px
  rn-opacity:0
  rn-position:absolute
  rn-right:0px
  rn-top:0px
  rn-width:100%
  rn-zIndex:-1"
    src="https://google.com/favicon.ico"
    style={Object {}} />
</div>
`;

exports[`components/Image prop "defaultSource" sets "height" and "width" styles if missing 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={
    Object {
      "backgroundImage": "url(\"https://google.com/favicon.ico\")",
      "height": "10px",
      "width": "20px",
    }
  }>
  <img
    className="
  rn-bottom:0px
  rn-height:100%
  rn-left:0px
  rn-opacity:0
  rn-position:absolute
  rn-right:0px
  rn-top:0px
  rn-width:100%
  rn-zIndex:-1"
    src="https://google.com/favicon.ico"
    style={Object {}} />
</div>
`;

exports[`components/Image prop "defaultSource" sets background image when value is a string 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={
    Object {
      "backgroundImage": "url(\"https://google.com/favicon.ico\")",
    }
  }>
  <img
    className="
  rn-bottom:0px
  rn-height:100%
  rn-left:0px
  rn-opacity:0
  rn-position:absolute
  rn-right:0px
  rn-top:0px
  rn-width:100%
  rn-zIndex:-1"
    src="https://google.com/favicon.ico"
    style={Object {}} />
</div>
`;

exports[`components/Image prop "defaultSource" sets background image when value is an object 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={
    Object {
      "backgroundImage": "url(\"https://google.com/favicon.ico\")",
    }
  }>
  <img
    className="
  rn-bottom:0px
  rn-height:100%
  rn-left:0px
  rn-opacity:0
  rn-position:absolute
  rn-right:0px
  rn-top:0px
  rn-width:100%
  rn-zIndex:-1"
    src="https://google.com/favicon.ico"
    style={Object {}} />
</div>
`;

exports[`components/Image prop "resizeMode" value "contain" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:contain
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}} />
`;

exports[`components/Image prop "resizeMode" value "cover" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}} />
`;

exports[`components/Image prop "resizeMode" value "none" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:auto
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}} />
`;

exports[`components/Image prop "resizeMode" value "stretch" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:100%-100%
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}} />
`;

exports[`components/Image prop "resizeMode" value "undefined" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}} />
`;

exports[`components/Image prop "style" correctly supports "resizeMode" property 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:contain
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}} />
`;

exports[`components/Image prop "testID" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  data-testid="testID"
  style={Object {}} />
`;

exports[`components/Image sets correct accessibility role" 1`] = `
<div
  className="
rn-alignItems:stretch
rn-backgroundColor:transparent
rn-backgroundPosition:center
rn-backgroundRepeat:no-repeat
rn-backgroundSize:cover
rn-borderTopStyle:solid
rn-borderRightStyle:solid
rn-borderBottomStyle:solid
rn-borderLeftStyle:solid
rn-borderTopWidth:0px
rn-borderRightWidth:0px
rn-borderBottomWidth:0px
rn-borderLeftWidth:0px
rn-boxSizing:border-box
rn-color:inherit
rn-display:flex
rn-flexShrink:0
rn-flexBasis:auto
rn-flexDirection:column
rn-font:inherit
rn-listStyle:none
rn-marginTop:0px
rn-marginRight:0px
rn-marginBottom:0px
rn-marginLeft:0px
rn-minHeight:0px
rn-minWidth:0px
rn-paddingTop:0px
rn-paddingRight:0px
rn-paddingBottom:0px
rn-paddingLeft:0px
rn-position:relative
rn-textAlign:inherit
rn-textDecoration:none
rn-zIndex:0"
  style={Object {}} />
`;
